--- a/src/LSP/LSP.fsproj
+++ b/src/LSP/LSP.fsproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Log.fs" />
@@ -11,6 +11,9 @@
     <Compile Include="Parser.fs" />
     <Compile Include="DocumentStore.fs" />
     <Compile Include="LanguageServer.fs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CSharpExtensions\CSharpExtensions.csproj" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
