Disable extensions on debug

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -34,7 +34,8 @@
             "runtimeExecutable": "${execPath}",
             "args": [
                 "D:\\Games\\Steam\\steamapps\\common\\Stellaris",
-                "--extensionDevelopmentPath=${workspaceRoot}/release"
+                "--extensionDevelopmentPath=${workspaceRoot}/release",
+                "--disable-extensions"
             ],
             "request": "launch",
             "sourceMaps": false,
