--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,5 @@
 {
+    "debug.javascript.defaultRuntimeExecutable": {
+        "pwa-node": "c:\\users\\thomas\\appdata\\local\\mise\\shims\\node"
+    }
 }
