--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "test:watch": "tsc -w -p . & vscode-test -c ./.vscode-test.js -w"
   },
   "dependencies": {
-    "vscode-languageclient":"^9.0.1"
+    "vscode-languageclient": "^9.0.1"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.3.1",
+    "@eslint/js": "^9.32.0",
     "@rollup/plugin-commonjs": "^28.0.6",
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@types/cytoscape": "^3.21.9",
@@ -27,6 +29,7 @@
     "cytoscape-canvas": "3.0.1",
     "cytoscape-elk": "github:jfstephe/cytoscape.js-elk",
     "cytoscape-popper": "1.0.7",
+    "eslint": "^9.32.0",
     "glob": "^11.0.3",
     "merge-images": "1.2.0",
     "mocha": "^11.7.1",
@@ -35,6 +38,7 @@
     "rollup-plugin-typescript2": "^0.36.0",
     "tippy.js": "^4.3.5",
     "tslib": "^2.8.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.38.0"
   }
 }
