Add strong typing for graph data

--- a/src/Main/Main.fsproj
+++ b/src/Main/Main.fsproj
@@ -24,6 +24,7 @@
     <Compile Include="LanguageServerFeatures.fs" />
     <Compile Include="GameLoader.fs" />
     <Compile Include="Completion.fs" />
+    <Compile Include="GraphTypes.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
