--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,13 +20,18 @@
             }
         },
         {
-            "name": "Extension Tests (CLI)",
-            "type": "node",
-            "request": "launch",
-            "program": "${workspaceFolder}/node_modules/@vscode/test-cli/bin/vscode-test",
-            "args": ["-c", "${workspaceFolder}/.vscode-test.js"],
-            "cwd": "${workspaceFolder}"
-        },
+    "name": "Extension Tests",
+    "type": "extensionHost",
+    "request": "launch",
+    "runtimeExecutable": "${execPath}",
+    "args": [
+        "--extensionDevelopmentPath=${workspaceFolder}/release",
+        "--extensionTestsPath=${workspaceFolder}/release/bin/client/test/suite/index"
+    ],
+    "outFiles": [
+        "${workspaceFolder}/out/client/test/**/*.js"
+    ]
+},
         {
             "preLaunchTask": "UpdateBuildDebug",
             "name": "Quick update, Build and Launch Extension (Debug)",
