--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
     "vscode": "^1.90.0"
   },
   "scripts": {
-    "compile": "tsc -p .",
-    "test": "npm run compile && vscode-test -c ./.vscode-test.js",
-    "test:watch": "tsc -w -p . & vscode-test -c ./.vscode-test.js -w"
+    "compile": "tsc -p ./tsconfig.extension.json && rollup -c -o ./out/client/webview/graph.js",
+    "test": "npm run compile && vscode-test -c ./.vscode-test.mjs",
+    "test:watch": "tsc -w -p . & vscode-test -c ./.vscode-test.mjs -w"
   },
   "dependencies": {
     "vscode-languageclient": "^9.0.1"
