--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
 		"module": "commonjs",
 		"moduleResolution": "node",
 		"rootDir": "client",
-		"outDir": "out/client",
+		"outDir": "release/bin/client",
 		"lib": [ "es2020", "dom" ],
 		"sourceMap": true,
 		"esModuleInterop": true
