--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -29,7 +29,7 @@
         "--extensionTestsPath=${workspaceFolder}/release/bin/client/test/suite/index"
     ],
     "outFiles": [
-        "${workspaceFolder}/out/client/test/**/*.js"
+        "${workspaceFolder}/release/bin/client/test/**/*.js"
     ]
 },
         {
