--- a/tsconfig.webview.json
+++ b/tsconfig.webview.json
@@ -1,14 +1,16 @@
 {
-	"compilerOptions": {
-		"module": "ES2020",
-		"target": "es2020",
-		// "outFile": "out/client/webview/graph.js",
-		"lib": ["es2020", "dom"],
-
-	},
-	"extends": "./tsconfig.json",
-	"exclude": [
-		"client/extension/*.ts",
-		"client/test/*.ts"
-	]
+    "compilerOptions": {
+        "module": "ES2020",
+        "target": "es2020",
+        "lib": ["es2020", "dom"],
+        "moduleResolution": "node",
+        "esModuleInterop": true,
+        "strict": true,
+        "skipLibCheck": true
+    },
+    "extends": "./tsconfig.json",
+    "exclude": [
+        "client/extension/*.ts",
+        "client/test/*.ts"
+    ]
 }
