--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
   "devDependencies": {
     "@eslint/compat": "^1.3.1",
     "@eslint/js": "^9.32.0",
+    "@popperjs/core": "2.11.8",
     "@rollup/plugin-commonjs": "^28.0.6",
     "@rollup/plugin-node-resolve": "^16.0.1",
+    "@rollup/plugin-replace": "^6.0.2",
+    "@types/cytoscape-popper": "2.0.4",
     "@types/handlebars": "^4.0.40",
     "@types/mocha": "^10.0.10",
     "@types/node": "^20.9",
     "@types/qtip2": "^2.2.30",
+    "@types/sinon": "17.0.4",
     "@types/vscode": "^1.83.0",
     "@vscode/test-cli": "^0.0.11",
     "@vscode/test-electron": "^2.3.8",
@@ -27,15 +31,15 @@
     "cytoscape": "^3.32.1",
     "cytoscape-canvas": "3.0.1",
     "cytoscape-elk": "github:jfstephe/cytoscape.js-elk",
-    "cytoscape-popper": "1.0.7",
+    "cytoscape-popper": "^2.0.0",
     "eslint": "^9.32.0",
     "glob": "^11.0.3",
     "merge-images": "1.2.0",
     "mocha": "^11.7.1",
-    "popper.js": "^1.15.0",
     "rollup-plugin-hypothetical": "^2.1.0",
     "rollup-plugin-typescript2": "^0.36.0",
-    "tippy.js": "^4.3.5",
+    "sinon": "21.0.0",
+    "tippy.js": "^6.3.7",
     "tslib": "^2.8.1",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0"
