--- a/tsconfig.webview.json
+++ b/tsconfig.webview.json
@@ -5,7 +5,7 @@
         "lib": ["es2020", "dom"],
         "moduleResolution": "node",
         "esModuleInterop": true,
-        "strict": true,
+        // "strict": true,
         "skipLibCheck": true
     },
     "extends": "./tsconfig.json",
