--- a/package.json
+++ b/package.json
@@ -13,11 +13,9 @@
   "devDependencies": {
     "@eslint/compat": "^1.3.1",
     "@eslint/js": "^9.32.0",
-    "@popperjs/core": "2.11.8",
     "@rollup/plugin-commonjs": "^28.0.6",
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-replace": "^6.0.2",
-    "@types/cytoscape-popper": "2.0.4",
     "@types/handlebars": "^4.0.40",
     "@types/mocha": "^10.0.10",
     "@types/node": "^20.9",
@@ -27,12 +25,14 @@
     "@vscode/test-cli": "^0.0.11",
     "@vscode/test-electron": "^2.3.8",
     "@vscode/vsce": "^3.6.0",
+    "@types/cytoscape-popper": "^2.0.4",
     "copyfiles": "^2.4.1",
     "cytoscape": "^3.32.1",
     "cytoscape-canvas": "3.0.1",
     "cytoscape-elk": "github:jfstephe/cytoscape.js-elk",
     "cytoscape-popper": "^2.0.0",
     "eslint": "^9.32.0",
+    "popper.js": "^1.16.1",
     "glob": "^11.0.3",
     "merge-images": "1.2.0",
     "mocha": "^11.7.1",
