--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "popper.js": "^1.16.1",
     "glob": "^11.0.3",
     "merge-images": "1.2.0",
+    "@types/merge-images": "^1.2.4",
     "mocha": "^11.7.1",
     "rollup-plugin-hypothetical": "^2.1.0",
     "rollup-plugin-typescript2": "^0.36.0",
