--- a/tsconfig.webview.json
+++ b/tsconfig.webview.json
@@ -5,8 +5,7 @@
         "lib": ["es2020", "dom"],
         "moduleResolution": "node",
         "esModuleInterop": true,
-        // "strict": true,
-        "skipLibCheck": true
+        // "strict": true
     },
     "extends": "./tsconfig.json",
     "exclude": [
