Add strict and fix

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
 		"outDir": "release/bin/client",
 		"lib": [ "es2020", "dom" ],
 		"sourceMap": true,
-		"esModuleInterop": true
+		"esModuleInterop": true,
+		"strict": true
 	},
 	"include": [
 		"client"
