--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/sinon": "17.0.4",
     "@types/vscode": "^1.83.0",
     "@vscode/test-cli": "^0.0.11",
+    "@vscode/test-electron": "^2.5.2",
     "@vscode/vsce": "^3.6.0",
     "cytoscape": "^3.32.1",
     "cytoscape-elk": "github:jfstephe/cytoscape.js-elk",
