--- a/tsconfig.webview.json
+++ b/tsconfig.webview.json
@@ -1,11 +1,6 @@
 {
     "compilerOptions": {
-        "module": "ES2020",
-        "target": "es2020",
-        "lib": ["es2020", "dom"],
-        "moduleResolution": "node",
-        "esModuleInterop": true,
-        // "strict": true
+        "module": "ES2020"
     },
     "extends": "./tsconfig.json",
     "exclude": [
