Update cwtools and changelog

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -23,6 +23,7 @@
     "name": "Extension Tests",
     "type": "extensionHost",
     "request": "launch",
+    "preLaunchTask": "UpdateBuild",
     "runtimeExecutable": "${execPath}",
     "args": [
         "--extensionDevelopmentPath=${workspaceFolder}/release",
