Fix testing from UI

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -24,14 +24,15 @@
     "type": "extensionHost",
     "request": "launch",
     "preLaunchTask": "UpdateBuild",
-    "runtimeExecutable": "${execPath}",
+    // "runtimeExecutable": "${execPath}",
+    "testConfiguration": "${workspaceFolder}/.vscode-test.js",
     "args": [
         "--extensionDevelopmentPath=${workspaceFolder}/release",
-        "--extensionTestsPath=${workspaceFolder}/release/bin/client/test/suite/index"
+        // "--extensionTestsPath=${workspaceFolder}/release/bin/client/test/suite/index"
     ],
-    "outFiles": [
-        "${workspaceFolder}/release/bin/client/test/**/*.js"
-    ]
+    // "outFiles": [
+        // "${workspaceFolder}/release/bin/client/test/**/*.js"
+    // ]
 },
         {
             "preLaunchTask": "UpdateBuildDebug",
