--- a/release/package.json
+++ b/release/package.json
@@ -222,7 +222,7 @@
         "cwtools.debug_mode": {
           "scope": "window",
           "type": "boolean",
-          "default": true,
+          "default": false,
           "description": "%configuration.cwtools.debug_mode.description%"
         },
         "cwtools.logging.diagnostic": {
