--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@rollup/plugin-commonjs": "^28.0.6",
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-replace": "^6.0.2",
+    "@types/chai": "^5.2.2",
     "@types/cytoscape-popper": "^2.0.4",
     "@types/merge-images": "^1.2.4",
     "@types/mocha": "^10.0.10",
@@ -22,6 +23,7 @@
     "@vscode/test-cli": "^0.0.11",
     "@vscode/test-electron": "^2.5.2",
     "@vscode/vsce": "^3.6.0",
+    "chai": "^5.2.1",
     "cytoscape": "^3.32.1",
     "cytoscape-elk": "github:jfstephe/cytoscape.js-elk",
     "cytoscape-popper": "^2.0.0",
