Synchronize backend changes

--- a/src/Main/Main.fsproj
+++ b/src/Main/Main.fsproj
@@ -18,6 +18,7 @@
     <ProjectReference Condition="'$(UseLocalCwtools)' == 'True'" Include="$(CwtoolsPath)" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PosHelper.fs" /> 
     <Compile Include="Serialize.fs" />
     <Compile Include="Git.fs" />
     <Compile Include="LanguageServerFeatures.fs" />
