--- a/src/Main/Main.fsproj
+++ b/src/Main/Main.fsproj
@@ -11,6 +11,7 @@
     <PublishReadyToRunComposite>true</PublishReadyToRunComposite>
   </PropertyGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Languages\Languages.csproj" />
     <RuntimeHostConfigurationOption Include="System.GC.NoAffinitize" Value="true" />
 
     <ProjectReference Include="..\LSP\LSP.fsproj" />
