Slightly better tests

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,10 +26,10 @@
     "preLaunchTask": "UpdateBuild",
     // "runtimeExecutable": "${execPath}",
     "testConfiguration": "${workspaceFolder}/.vscode-test.js",
-    "args": [
-        "--extensionDevelopmentPath=${workspaceFolder}/release",
+    // "args": [
+        // "--extensionDevelopmentPath=${workspaceFolder}/release",
         // "--extensionTestsPath=${workspaceFolder}/release/bin/client/test/suite/index"
-    ],
+    // ],
     // "outFiles": [
         // "${workspaceFolder}/release/bin/client/test/**/*.js"
     // ]
