Up cwtools version to include eu5

--- a/release/package.json
+++ b/release/package.json
@@ -643,6 +643,17 @@
         "editor.acceptSuggestionOnEnter": "off",
         "editor.suggest.insertMode": "replace"
       },
+      "[eu5]": {
+        "files.autoGuessEncoding": true,
+        "editor.quickSuggestions": {
+          "other": true,
+          "comments": false,
+          "strings": true
+        },
+        "editor.insertSpaces": false,
+        "editor.acceptSuggestionOnEnter": "off",
+        "editor.suggest.insertMode": "replace"
+      },
       "[customparadox]": {
         "files.autoGuessEncoding": true,
         "editor.quickSuggestions": {
